added resp. navbar

--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
       <li><a href="#contact">Contact</a></li>
     </ul>
   </header>
-
-  <h2>Responsive Column Cards</h2>
-  <p>Resize the browser window to see the effect.</p>
+  <div class="text">
+    <br><br><br>
+    <h2>Responsive Column Cards</h2>
+    <h2>Responsive Column Cards</h2>
+    <h2>Responsive Column Cards</h2>
+    <h2>Responsive Column Cards</h2>
+    <h2>Responsive Column Cards</h2>
+    <p>Resize the browser window to see the effect.</p>
+  </div>
 
   <div class="row">
     <div class="column">
