added resp. navbar

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="main.css">
   <title>Wok Show</title>
+
 </head>
 
 <body>
+
+
   <header class="header">
     <a href="/" class="logo">AGT</a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
@@ -20,6 +23,7 @@
     </ul>
   </header>
   <div class="text">
+    <img srcset="" src="/img/bg.jpg" alt="">
     <br><br><br>
     <h2>Responsive Column Cards</h2>
     <h2>Responsive Column Cards</h2>
@@ -62,6 +66,8 @@
       </div>
     </div>
   </div>
+
+
 </body>
 
 </html>
