--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 
   <header class="header">
+    <div class="headline">
+      <h1>Chania</h1>
+    </div>
     <a href="/" class="logo">AGT</a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
@@ -31,6 +34,9 @@
     <h2>Responsive Column Cards</h2>
     <h2>Responsive Column Cards</h2>
     <p>Resize the browser window to see the effect.</p>
+    <textarea name="" rows="8" cols="80">
+      hi...
+    </textarea>
   </div>
 
   <div class="row">
