--- a/index.html
+++ b/index.html
@@ -10,72 +10,78 @@
 
 <body>
 
+  <div class="background">
+    <header class="header">
 
-  <header class="header">
-    <div class="headline">
-      <h1>Chania</h1>
+      <a href="/" class="logo">AGT</a>
+      <input class="menu-btn" type="checkbox" id="menu-btn" />
+      <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+      <ul class="menu">
+        <li><a href="#work">Our Work</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#careers">Careers</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </header>
+    <div class="text">
+      <img srcset="" src="/img/bg.jpg" alt="">
+      <br><br><br>
+      <div class="headline">
+        <h1>Chania</h1>
+      </div>
+      <h2>Responsive Column Cards</h2>
+      <h2>Responsive Column Cards</h2>
+      <h2>Responsive Column Cards</h2>
+      <h2>Responsive Column Cards</h2>
+      <h2>Responsive Column Cards</h2>
+      <p>Resize the browser window to see the effect.</p>
+      <!-- <textarea name="" rows="8" cols="80">
+      hi...
+    </textarea> -->
     </div>
-    <a href="/" class="logo">AGT</a>
-    <input class="menu-btn" type="checkbox" id="menu-btn" />
-    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-    <ul class="menu">
-      <li><a href="#work">Our Work</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#careers">Careers</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </header>
-  <div class="text">
-    <img srcset="" src="/img/bg.jpg" alt="">
-    <br><br><br>
-    <h2>Responsive Column Cards</h2>
-    <h2>Responsive Column Cards</h2>
-    <h2>Responsive Column Cards</h2>
-    <h2>Responsive Column Cards</h2>
-    <h2>Responsive Column Cards</h2>
-    <p>Resize the browser window to see the effect.</p>
+
+    <div class="row">
+      <div class="column">
+        <div class="card">
+          <h3>Card 1</h3>
+          <p>Some text</p>
+          <p>Some text</p>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <h3>Card 2</h3>
+          <p>Some text</p>
+          <p>Some text</p>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <h3>Card 3</h3>
+          <p>Some text</p>
+          <p>Some text</p>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <h3>Card 4</h3>
+          <p>Some text</p>
+          <p>Some text</p>
+        </div>
+      </div>
+      <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+      <!--
     <textarea name="" rows="8" cols="80">
       hi...
-    </textarea>
+    </textarea> -->
+    </div>
+    <div class="footer">
+      <p>Resize the browser window to see how the content respond to the resizing.</p>
+    </div>
   </div>
-
-  <div class="row">
-    <div class="column">
-      <div class="card">
-        <h3>Card 1</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
-    </div>
-
-    <div class="column">
-      <div class="card">
-        <h3>Card 2</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
-    </div>
-
-    <div class="column">
-      <div class="card">
-        <h3>Card 3</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
-    </div>
-
-    <div class="column">
-      <div class="card">
-        <h3>Card 4</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
-    </div>
-    <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
-    </iframe>
-  </div>
-
-
 </body>
 
 </html>
