--- a/index.html
+++ b/index.html
@@ -24,17 +24,29 @@
       </ul>
     </header>
     <div class="text">
-      <img srcset="" src="/img/bg.jpg" alt="">
+
       <br><br><br>
-      <div class="headline">
+      <!-- <div class="headline">
         <h1>Chania</h1>
+      </div> -->
+      <div class="oneRow">
+        <div class="twoColumn">
+          <div class="card">
+            <h3>Card 1</h3>
+            <p>Some text</p>
+            <p>Some text</p>
+          </div>
+        </div>
+        <div class="twoColumn">
+          <h2>Responsive Column Cards</h2>
+          <h2>Responsive Column Cards</h2>
+          <h2>Responsive Column Cards</h2>
+          <h2>Responsive Column Cards</h2>
+          <h2>Responsive Column Cards</h2>
+          <p>Resize the browser window to see the effect.</p>
+        </div>
       </div>
-      <h2>Responsive Column Cards</h2>
-      <h2>Responsive Column Cards</h2>
-      <h2>Responsive Column Cards</h2>
-      <h2>Responsive Column Cards</h2>
-      <h2>Responsive Column Cards</h2>
-      <p>Resize the browser window to see the effect.</p>
+
       <!-- <textarea name="" rows="8" cols="80">
       hi...
     </textarea> -->
@@ -72,7 +84,7 @@
           <p>Some text</p>
         </div>
       </div>
-      <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+      <!-- <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe> -->
       <!--
     <textarea name="" rows="8" cols="80">
       hi...
