--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
       <!-- <div class="headline">
         <h1>Chania</h1>
       </div> -->
-      <div class="oneRow">
-        <div class="twoColumn">
+      <div class="Row">
+        <div class="column">
           <div class="card">
-            <h3>Card 1</h3>
+            <img src="./img/bg.jpg" alt="">
+            <!-- <h3>Card 1</h3>
             <p>Some text</p>
-            <p>Some text</p>
+            <p>Some text</p> -->
           </div>
         </div>
         <div class="twoColumn">
@@ -44,6 +45,41 @@
           <h2>Responsive Column Cards</h2>
           <h2>Responsive Column Cards</h2>
           <p>Resize the browser window to see the effect.</p>
+        </div>
+      </div>
+      <div class="Row">
+        <div class="column">
+          <div class="card">
+            <img src="./img/bg.jpg" alt="">
+            <!-- <h3>Card 1</h3>
+            <p>Some text</p>
+            <p>Some text</p> -->
+          </div>
+        </div>
+        <div class="twoColumn">
+          <h2>Responsive Column Cards</h2>
+          <h2>Responsive Column Cards</h2>
+          <h2>Responsive Column Cards</h2>
+          <h2>Responsive Column Cards</h2>
+          <h2>Responsive Column Cards</h2>
+          <p>Resize the browser window to see the effect.</p>
+        </div>
+      </div>
+      <div class="oneRow">
+        <div class="twoColumn">
+          <h2>Responsive Column Cards</h2>
+          <h2>Responsive Column Cards</h2>
+          <h2>Responsive Column Cards</h2>
+          <h2>Responsive Column Cards</h2>
+          <h2>Responsive Column Cards</h2>
+          <p>Resize the browser window to see the effect.</p>
+        </div>
+        <div class="twoColumn">
+          <div class="card">
+            <h3>Card 1</h3>
+            <p>Some text</p>
+            <p>Some text</p>
+          </div>
         </div>
       </div>
 
