added form and adjusted the grid

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <div class="background">
     <header class="header">
 
-      <a href="/" class="logo">AGT</a>
+      <a href="/" class="logo">Logo</a>
       <input class="menu-btn" type="checkbox" id="menu-btn" />
       <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
       <ul class="menu">
-        <li><a href="#work">Our Work</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#careers">Careers</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#Philosophie">Philosophie</a></li>
+        <li><a href="#about">Speisekarte</a></li>
+        <li><a href="#careers">Reservierung</a></li>
+        <li><a href="#contact">Kontakt Uns</a></li>
       </ul>
     </header>
     <div class="text">
@@ -29,7 +29,7 @@
       <!-- <div class="headline">
         <h1>Chania</h1>
       </div> -->
-      <div class="Row">
+      <div class="row">
         <div class="column">
           <div class="card">
             <img src="./img/bg.jpg" alt="">
@@ -38,16 +38,28 @@
             <p>Some text</p> -->
           </div>
         </div>
-        <div class="twoColumn">
-          <h2>Responsive Column Cards</h2>
-          <h2>Responsive Column Cards</h2>
-          <h2>Responsive Column Cards</h2>
-          <h2>Responsive Column Cards</h2>
-          <h2>Responsive Column Cards</h2>
-          <p>Resize the browser window to see the effect.</p>
+        <div class="column">
+          <h2> What is Lorem Ipsum?</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+            specimen
+            book.
+            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
+            recently with
+            desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+          </p>
         </div>
       </div>
-      <div class="Row">
+      <div class="row">
+        <div class="column">
+          <h2> What is Lorem Ipsum?</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+            specimen
+            book.
+            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
+            recently with
+            desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+          </p>
+        </div>
         <div class="column">
           <div class="card">
             <img src="./img/bg.jpg" alt="">
@@ -55,14 +67,6 @@
             <p>Some text</p>
             <p>Some text</p> -->
           </div>
-        </div>
-        <div class="twoColumn">
-          <h2>Responsive Column Cards</h2>
-          <h2>Responsive Column Cards</h2>
-          <h2>Responsive Column Cards</h2>
-          <h2>Responsive Column Cards</h2>
-          <h2>Responsive Column Cards</h2>
-          <p>Resize the browser window to see the effect.</p>
         </div>
       </div>
       <!-- <div class="oneRow">
@@ -129,17 +133,17 @@
     </textarea> -->
   </div>
 
-  <div class="container">
+  <div class="fomular">
 
     <div class="row">
       <div class="column">
         <div style="text-align:center">
-          <h2>Contact Us</h2>
+          <h2>Reservierung</h2>
           <p>Swing by for a cup of coffee, or leave us a message:</p>
         </div>
         <img src="./img/bg.jpg" style="width:100%">
       </div>
-      <div class="twoColumn">
+      <div class="column">
         <form>
           <label for="fname">First Name</label>
           <input type="text" id="fname" name="firstname" placeholder="Your name..">
@@ -168,6 +172,28 @@
       </div>
     </div>
   </div>
+
+  <div class="row">
+    <div class="column">
+      <h2> What is Lorem Ipsum?</h2>
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+        specimen
+        book.
+        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
+        recently with
+        desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+      </p>
+    </div>
+    <div class="column">
+      <div class="card">
+        <img src="./img/bg.jpg" alt="">
+        <!-- <h3>Card 1</h3>
+        <p>Some text</p>
+        <p>Some text</p> -->
+      </div>
+    </div>
+  </div>
+
   <div class="footer">
     <p>© 2019 – WokShow. Alle Rechte vorbehalten.</p>
   </div>
