the background is fixed when we scroll

--- a/index.html
+++ b/index.html
@@ -10,66 +10,66 @@
 
 <body>
 
-  <div class="background">
-    <header class="header">
+  <!-- <div class="background"> -->
+  <header class="header">
 
-      <a href="/" class="logo">Logo</a>
-      <input class="menu-btn" type="checkbox" id="menu-btn" />
-      <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-      <ul class="menu">
-        <li><a href="#Philosophie">Philosophie</a></li>
-        <li><a href="#about">Speisekarte</a></li>
-        <li><a href="#careers">Reservierung</a></li>
-        <li><a href="#contact">Kontakt Uns</a></li>
-      </ul>
-    </header>
-    <div class="text">
+    <a href="/" class="logo">Logo</a>
+    <input class="menu-btn" type="checkbox" id="menu-btn" />
+    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+    <ul class="menu">
+      <li><a href="#Philosophie">Philosophie</a></li>
+      <li><a href="#about">Speisekarte</a></li>
+      <li><a href="#careers">Reservierung</a></li>
+      <li><a href="#contact">Kontakt Uns</a></li>
+    </ul>
+  </header>
+  <div class="text">
 
-      <br><br><br>
-      <!-- <div class="headline">
+    <br><br><br>
+    <!-- <div class="headline">
         <h1>Chania</h1>
       </div> -->
-      <div class="row">
-        <div class="column">
-          <div class="card">
-            <img src="./img/bg.jpg" alt="">
-            <!-- <h3>Card 1</h3>
+    <div class="row">
+      <div class="column">
+        <div class="card">
+          <img src="./img/bg.jpg" alt="">
+          <!-- <h3>Card 1</h3>
             <p>Some text</p>
             <p>Some text</p> -->
-          </div>
-        </div>
-        <div class="column">
-          <h2> What is Lorem Ipsum?</h2>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-            specimen
-            book.
-            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
-            recently with
-            desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-          </p>
         </div>
       </div>
-      <div class="row">
-        <div class="column">
-          <h2> What is Lorem Ipsum?</h2>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-            specimen
-            book.
-            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
-            recently with
-            desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-          </p>
-        </div>
-        <div class="column">
-          <div class="card">
-            <img src="./img/bg.jpg" alt="">
-            <!-- <h3>Card 1</h3>
+      <div class="column">
+        <h2> What is Lorem Ipsum?</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+          specimen
+          book.
+          It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
+          recently with
+          desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="column">
+        <h2>Kontakt Uns</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+          specimen
+          book.
+          It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
+          recently with
+          desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+      </div>
+      <div class="column">
+        <div class="card">
+          <img src="./img/bg.jpg" alt="">
+          <!-- <h3>Card 1</h3>
             <p>Some text</p>
             <p>Some text</p> -->
-          </div>
         </div>
       </div>
-      <!-- <div class="oneRow">
+    </div>
+    <!-- <div class="oneRow">
         <div class="twoColumn">
           <h2>Responsive Column Cards</h2>
           <h2>Responsive Column Cards</h2>
@@ -87,12 +87,12 @@
         </div>
       </div> -->
 
-      <!-- <textarea name="" rows="8" cols="80">
+    <!-- <textarea name="" rows="8" cols="80">
       hi...
     </textarea> -->
-    </div>
+  </div>
 
-    <!-- <div class="row">
+  <!-- <div class="row">
       <div class="column">
         <div class="card">
           <h3>Card 1</h3>
@@ -126,8 +126,8 @@
       </div> -->
 
 
-    <!-- <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe> -->
-    <!--
+  <!-- <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe> -->
+  <!--
     <textarea name="" rows="8" cols="80">
       hi...
     </textarea> -->
@@ -197,7 +197,7 @@
   <div class="footer">
     <p>© 2019 – WokShow. Alle Rechte vorbehalten.</p>
   </div>
-  </div>
+  <!-- </div> -->
 </body>
 
 </html>
