--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
       </div>
       <div class="column">
-        <h2> What is Lorem Ipsum?</h2>
+        <h2>Philosophie</h2>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
           specimen
           book.
@@ -51,7 +51,7 @@
     </div>
     <div class="row">
       <div class="column">
-        <h2>Kontakt Uns</h2>
+        <h2>Speisekarte</h2>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
           specimen
           book.
@@ -175,7 +175,7 @@
 
   <div class="row">
     <div class="column">
-      <h2> What is Lorem Ipsum?</h2>
+      <h2>Kontakt Uns</h2>
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
         specimen
         book.
