added 4pages and changed navbar CSS

--- a/philosophie.html
+++ b/philosophie.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="philosophie.css">
   <title>Wok Show</title>
 
 </head>
@@ -13,14 +13,14 @@
   <!-- <div class="background"> -->
   <header class="header">
 
-    <a href="index.html" class="logo"><img src="./img/wokshowLogo.png" alt="wokshowLogo" style="width:90px; height:80px;"></a>
+    <a href="index.html" class="logo">Logo</a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
       <li><a href="philosophie.html">Philosophie</a></li>
       <li><a href="#about">Speisekarte</a></li>
       <li><a href="#careers">Reservierung</a></li>
-      <li><a href="#contact">Kontakt</a></li>
+      <li><a href="#contact">Kontakt Uns</a></li>
     </ul>
   </header>
   <div class="text">
@@ -49,7 +49,7 @@
         </p>
       </div>
     </div>
-    <div class="row">
+    <!-- <div class="row">
       <div class="column">
         <h2>Speisekarte</h2>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
@@ -62,13 +62,14 @@
       </div>
       <div class="column">
         <div class="card">
-          <img src="./img/bg.jpg" alt="">
-          <!-- <h3>Card 1</h3>
+          <img src="./img/bg.jpg" alt=""> -->
+    <!-- <h3>Card 1</h3>
             <p>Some text</p>
             <p>Some text</p> -->
-        </div>
+    <!-- </div>
       </div>
-    </div>
+    </div> -->
+
     <!-- <div class="oneRow">
         <div class="twoColumn">
           <h2>Responsive Column Cards</h2>
@@ -90,9 +91,9 @@
     <!-- <textarea name="" rows="8" cols="80">
       hi...
     </textarea> -->
-  </div>
+    <!-- </div> -->
 
-  <!-- <div class="row">
+    <!-- <div class="row">
       <div class="column">
         <div class="card">
           <h3>Card 1</h3>
@@ -126,15 +127,14 @@
       </div> -->
 
 
-  <!-- <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe> -->
-  <!--
+    <!-- <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe> -->
+    <!--
     <textarea name="" rows="8" cols="80">
       hi...
     </textarea> -->
-  </div>
-
+    <!-- </div> -->
+    <!--
   <div class="fomular">
-
     <div class="row">
       <div class="column">
         <div style="text-align:center">
@@ -186,18 +186,18 @@
     </div>
     <div class="column">
       <div class="card">
-        <img src="./img/bg.jpg" alt="">
-        <!-- <h3>Card 1</h3>
+        <img src="./img/bg.jpg" alt=""> -->
+    <!-- <h3>Card 1</h3>
         <p>Some text</p>
         <p>Some text</p> -->
-      </div>
+    <!-- </div>
     </div>
-  </div>
+  </div> -->
 
-  <div class="footer">
-    <p>© 2019 – WokShow. Alle Rechte vorbehalten.</p>
-  </div>
-  <!-- </div> -->
+    <div class="footer">
+      <p>© 2019 – WokShow. Alle Rechte vorbehalten.</p>
+    </div>
+    <!-- </div> -->
 </body>
 
 </html>
