adjusted Background and the navbar

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 
 <body>
+  <div class="background">
+  </div>
+
 
   <header class="header">
-
     <a href="index.html" class="logo"><img src="./img/wokshowLogo.png" alt="wokshowLogo" style="width:90px; height:80px;"></a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
@@ -23,53 +25,53 @@
       <li><a href="#contact">Kontakt</a></li>
     </ul>
   </header>
-  <div class="background">
-    <div class="text">
-      <br><br><br>
-      <!-- <div class="headline">
+
+  <div class="text">
+    <br><br><br>
+    <!-- <div class="headline">
         <h1>Chania</h1>
       </div> -->
-      <div class="row">
-        <div class="column">
-          <div class="card">
-            <img src="./img/bg.jpg" alt="">
-            <!-- <h3>Card 1</h3>
+    <div class="row">
+      <div class="column">
+        <div class="card">
+          <img src="./img/bg.jpg" alt="">
+          <!-- <h3>Card 1</h3>
             <p>Some text</p>
             <p>Some text</p> -->
-          </div>
-        </div>
-        <div class="column">
-          <h2>Philosophie</h2>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-            specimen
-            book.
-            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
-            recently with
-            desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-          </p>
         </div>
       </div>
-      <div class="row">
-        <div class="column">
-          <h2>Speisekarte</h2>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-            specimen
-            book.
-            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
-            recently with
-            desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-          </p>
-        </div>
-        <div class="column">
-          <div class="card">
-            <img src="./img/bg.jpg" alt="">
-            <!-- <h3>Card 1</h3>
+      <div class="column">
+        <h2>Philosophie</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+          specimen
+          book.
+          It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
+          recently with
+          desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="column">
+        <h2>Speisekarte</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+          specimen
+          book.
+          It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
+          recently with
+          desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+      </div>
+      <div class="column">
+        <div class="card">
+          <img src="./img/bg.jpg" alt="">
+          <!-- <h3>Card 1</h3>
             <p>Some text</p>
             <p>Some text</p> -->
-          </div>
         </div>
       </div>
-      <!-- <div class="oneRow">
+    </div>
+    <!-- <div class="oneRow">
         <div class="twoColumn">
           <h2>Responsive Column Cards</h2>
           <h2>Responsive Column Cards</h2>
@@ -87,12 +89,12 @@
         </div>
       </div> -->
 
-      <!-- <textarea name="" rows="8" cols="80">
+    <!-- <textarea name="" rows="8" cols="80">
       hi...
     </textarea> -->
-    </div>
+  </div>
 
-    <!-- <div class="row">
+  <!-- <div class="row">
       <div class="column">
         <div class="card">
           <h3>Card 1</h3>
@@ -126,8 +128,8 @@
       </div> -->
 
 
-    <!-- <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe> -->
-    <!--
+  <!-- <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe> -->
+  <!--
     <textarea name="" rows="8" cols="80">
       hi...
     </textarea> -->
@@ -197,7 +199,7 @@
   <div class="footer">
     <p>© 2019 – WokShow. Alle Rechte vorbehalten.</p>
   </div>
-  </div>
+  <!-- </div> -->
 </body>
 
 </html>
