added one page and changed css and added a tag

--- a/index.html
+++ b/index.html
@@ -13,31 +13,33 @@
   <div class="background">
   </div>
 
-
   <header class="header">
     <a href="index.html" class="logo"><img src="./img/wokshowLogo.png" alt="wokshowLogo" style="width:90px; height:80px;"></a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
       <li><a href="philosophie.html">Philosophie</a></li>
-      <li><a href="#about">Speisekarte</a></li>
-      <li><a href="#careers">Reservierung</a></li>
-      <li><a href="#contact">Kontakt</a></li>
+      <li><a href="speisekarte.html">Speisekarte</a></li>
+      <li><a href="reservierung.html">Reservierung</a></li>
+      <li><a href="kontakt.html">Kontakt</a></li>
     </ul>
   </header>
 
   <div class="text">
     <br><br><br>
-    <!-- <div class="headline">
-        <h1>Chania</h1>
-      </div> -->
+    <div class="row">
+      <div class="column">
+        <!-- <h2>Speisekarte</h2> -->
+        <p id="overlap">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+      </div>
+      <div class="column">
+        <img src="./img/bg.jpg" alt="">
+      </div>
+    </div>
     <div class="row">
       <div class="column">
         <div class="card">
           <img src="./img/bg.jpg" alt="">
-          <!-- <h3>Card 1</h3>
-            <p>Some text</p>
-            <p>Some text</p> -->
         </div>
       </div>
       <div class="column">
@@ -65,9 +67,6 @@
       <div class="column">
         <div class="card">
           <img src="./img/bg.jpg" alt="">
-          <!-- <h3>Card 1</h3>
-            <p>Some text</p>
-            <p>Some text</p> -->
         </div>
       </div>
     </div>
