--- a/kontakt.html
+++ b/kontakt.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt|Dekko&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="main.css">
   <title>Wok Show</title>
@@ -26,17 +27,19 @@
   </header>
 
   <div class="row">
-    <div class="column">
+    <div class="kontaktColumn">
       <h2>Kontakt Uns</h2>
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-        specimen
-        book.
-        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
-        recently with
-        desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+      <i class="fas fa-map-marker-alt"><span>Greifenhagener Str. 31, 10437 Berlin</span></i>
+
+
+
+
+
+      <p>Sollten Sie noch weitere Fragen haben,
+        stehen wir Ihnen gerne zur Verfügung.
       </p>
     </div>
-    <div class="column">
+    <div class="kontaktColumn">
       <div class="card">
         <img src="./img/bg.jpg" alt="">
       </div>
