added the responsive layout at main.css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
-      <li><a href="philosophie.html">Philosophie</a></li>
+      <!-- <li><a href="philosophie.html">Philosophie</a></li> -->
       <li><a href="speisekarte.html">Speisekarte</a></li>
       <li><a href="reservierung.html">Reservierung</a></li>
       <li><a href="kontakt.html">Kontakt</a></li>
@@ -27,7 +27,6 @@
   </header>
 
   <div class="text">
-    <br><br><br>
     <div class="row">
       <div class="column">
         <p id="overlap">Dumplings sind ein Klassiker in der chinesischen Küche.</p>
@@ -42,7 +41,7 @@
           <img src="./img/bg.jpg" alt="">
         </div>
       </div>
-      <div class="column">
+      <div class="column bg">
         <h2>Philosophie</h2>
         <p>China hat eine traditionsreiche Küche,
           die aufgrund der Ressourcen der verschiedenen
