--- a/kontakt.html
+++ b/kontakt.html
@@ -27,19 +27,23 @@
   </header>
 
   <div class="row">
-    <div class="kontaktColumn">
-      <h2>Kontakt Uns</h2>
-      <i class="fas fa-map-marker-alt"><span>Greifenhagener Str. 31, 10437 Berlin</span></i>
-
-
-
-
-
-      <p>Sollten Sie noch weitere Fragen haben,
-        stehen wir Ihnen gerne zur Verfügung.
-      </p>
+    <div class="column kontaktColumn">
+      <h2>Kontakt Info</h2>
+      <i class="fas fa-map-marker-alt"></i><span class="kontakt">Greifenhagener Str. 31, 10437 Berlin</span>
+      <br><br>
+      <i class="fas fa-phone-volume"></i><span class="kontakt">03043911857</span>
+      <br><br>
+      <h2 class="kontakt">Öffnungszeiten</h2>
+      <i class="far fa-clock"></i>
+      <span>Montag-Donnerstag: 17:00-22:30</span>
+      <br><br>
+      <i class="far fa-clock"></i>
+      <span>Freitag-Sonntag: 12:30-22:30</span>
+      <br>
+      <p>Sollten Sie noch weitere Fragen haben,stehen wir Ihnen gerne zur Verfügung.</p>
     </div>
-    <div class="kontaktColumn">
+
+    <div class="column kontaktColumn">
       <div class="card">
         <img src="./img/bg.jpg" alt="">
       </div>
