--- a/reservierung.html
+++ b/reservierung.html
@@ -32,7 +32,7 @@
       <div class="column">
         <div style="text-align:center">
           <h2>Reservierung</h2>
-          <p>Swing by for a cup of coffee, or leave us a message:</p>
+          <h3>Swing by for Dumplings, or leave us a message:</h3>
         </div>
         <img src="./img/bg.jpg" style="width:100%">
       </div>
