--- a/index.html
+++ b/index.html
@@ -29,18 +29,13 @@
   <div class="text">
     <div class="row">
       <div class="column">
-        <p id="overlap">Dumplings sind ein Klassiker in der chinesischen Küche.</p>
+        <img src="./img/dump.jpg" alt="">
       </div>
       <div class="column">
-        <img src="./img/bg.jpg" alt="">
+        <p id="overlap">Willkommen zum Wok Show . <br> Dumplings sind ein Klassiker in der chinesischen Küche.</p>
       </div>
     </div>
     <div class="row">
-      <div class="column">
-        <div class="card">
-          <img src="./img/bg.jpg" alt="">
-        </div>
-      </div>
       <div class="column bg">
         <h2>Philosophie</h2>
         <p>China hat eine traditionsreiche Küche,
@@ -55,6 +50,10 @@
           Spezialitäten der chinesischen Küche.
         </p>
       </div>
+      <div class="column">
+        <img class="bgimg" src="./img/bg.jpg" alt="">
+      </div>
+
     </div>
     <div class="footer">
       <p>© 2019 – WokShow. Alle Rechte vorbehalten.</p>
