--- a/speisekarte.html
+++ b/speisekarte.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt|Dekko&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="speisekarte.css">
   <title>Wok Show</title>
 
 </head>
@@ -18,13 +19,34 @@
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
-      <li><a href="philosophie.html">Philosophie</a></li>
+      <!-- <li><a href="philosophie.html">Philosophie</a></li> -->
       <li><a href="speisekarte.html">Speisekarte</a></li>
       <li><a href="reservierung.html">Reservierung</a></li>
       <li><a href="kontakt.html">Kontakt</a></li>
     </ul>
   </header>
-
+  <div class="row">
+    <div class="column kontaktColumn">
+      <div class="card">
+        <img src="./img/bg.jpg" alt="">
+      </div>
+    </div>
+    <div class="column kontaktColumn">
+      <h2>Speisekarte</h2>
+      <i class="fas fa-map-marker-alt"></i><span class="kontakt">Greifenhagener Str. 31, 10437 Berlin</span>
+      <br><br>
+      <i class="fas fa-phone-volume"></i><span class="kontakt">03043911857</span>
+      <br><br>
+      <h2 class="kontakt">Öffnungszeiten</h2>
+      <i class="far fa-clock"></i>
+      <span>Montag-Donnerstag: 17:00-22:30</span>
+      <br><br>
+      <i class="far fa-clock"></i>
+      <span>Freitag-Sonntag: 12:30-22:30</span>
+      <br>
+      <p>Sollten Sie noch weitere Fragen haben,stehen wir Ihnen gerne zur Verfügung.</p>
+    </div>
+  </div>
 
 
   <div class="footer">
