--- a/kontakt.html
+++ b/kontakt.html
@@ -29,9 +29,9 @@
   <div class="row">
     <div class="column kontaktColumn">
       <h2>Kontakt Info</h2>
-      <i class="fas fa-map-marker-alt"></i><span class="kontakt">Greifenhagener Str. 31, 10437 Berlin</span>
+      <a href="https://goo.gl/maps/oaSf1Mk3sq21t1Nu9"><i class="fas fa-map-marker-alt"></i><span class="kontakt">Greifenhagener Str. 31, 10437 Berlin</span></a>
       <br><br>
-      <i class="fas fa-phone-volume"></i><span class="kontakt">03043911857</span>
+      <a href="tel:03043911857"><i class="fas fa-phone-volume"></i><span class="kontakt">03043911857</span></a>
       <br><br>
       <h2 class="kontakt">Öffnungszeiten</h2>
       <i class="far fa-clock"></i>
@@ -44,9 +44,7 @@
     </div>
 
     <div class="column kontaktColumn">
-      <div class="card">
-        <img src="./img/bg.jpg" alt="">
-      </div>
+      <img class="kontaktimg" src="./img/Wokshow_02.jpg" alt="">
     </div>
   </div>
 
