added flip card at speisekarte.html and css

--- a/kontakt.html
+++ b/kontakt.html
@@ -32,18 +32,17 @@
       <a href="https://goo.gl/maps/oaSf1Mk3sq21t1Nu9"><i class="fas fa-map-marker-alt"></i><span class="kontakt">Greifenhagener Str. 31, 10437 Berlin</span></a>
       <br><br>
       <a href="tel:03043911857"><i class="fas fa-phone-volume"></i><span class="kontakt">03043911857</span></a>
-      <br><br>
+      <br>
       <h2 class="kontakt">Öffnungszeiten</h2>
       <i class="far fa-clock"></i>
-      <span>Montag-Donnerstag: 17:00-22:30</span>
+      <span class="kontakt">Montag-Donnerstag: 17:00-22:30</span>
       <br><br>
       <i class="far fa-clock"></i>
-      <span>Freitag-Sonntag: 12:30-22:30</span>
-      <br>
+      <span class="kontakt">Freitag-Sonntag: 12:30-22:30</span>
       <p>Sollten Sie noch weitere Fragen haben,stehen wir Ihnen gerne zur Verfügung.</p>
     </div>
 
-    <div class="column kontaktColumn">
+    <div class="column">
       <img class="kontaktimg" src="./img/Wokshow_02.jpg" alt="">
     </div>
   </div>
