--- a/speisekarte.html
+++ b/speisekarte.html
@@ -25,26 +25,49 @@
       <li><a href="kontakt.html">Kontakt</a></li>
     </ul>
   </header>
+
   <div class="row">
-    <div class="column kontaktColumn">
-      <div class="card">
-        <img src="./img/bg.jpg" alt="">
+    <div class="column">
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="./img/dumpMeat.jpg" alt="Dumplings" style="width:300px;height:300px;">
+          </div>
+          <div class="flip-card-back">
+            <h1>John Doe</h1>
+            <p>Architect & Engineer</p>
+            <p>We love that guy</p>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="column kontaktColumn">
-      <h2>Speisekarte</h2>
-      <i class="fas fa-map-marker-alt"></i><span class="kontakt">Greifenhagener Str. 31, 10437 Berlin</span>
-      <br><br>
-      <i class="fas fa-phone-volume"></i><span class="kontakt">03043911857</span>
-      <br><br>
-      <h2 class="kontakt">Öffnungszeiten</h2>
-      <i class="far fa-clock"></i>
-      <span>Montag-Donnerstag: 17:00-22:30</span>
-      <br><br>
-      <i class="far fa-clock"></i>
-      <span>Freitag-Sonntag: 12:30-22:30</span>
-      <br>
-      <p>Sollten Sie noch weitere Fragen haben,stehen wir Ihnen gerne zur Verfügung.</p>
+    <div class="column">
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="./img/dumpVege.jpg" alt="Dumplings" style="width:300px;height:300px;">
+          </div>
+          <div class="flip-card-back">
+            <h1>John Doe</h1>
+            <p>Architect & Engineer</p>
+            <p>We love that guy</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="column">
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="./img/dumpVegan.jpg" alt="Dumplings" style="width:300px;height:300px;">
+          </div>
+          <div class="flip-card-back">
+            <h1>John Doe</h1>
+            <p>Architect & Engineer</p>
+            <p>We love that guy</p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
