adjusted index.html and speisekarte

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 
   <div class="text">
     <div class="row">
-      <div class="column">
+      <!-- <div class="column">
         <img src="./img/dump.jpg" alt="">
-      </div>
+      </div> -->
       <div class="column">
         <p id="overlap">Willkommen zum Wok Show . <br> Dumplings sind ein Klassiker in der chinesischen Küche.</p>
       </div>
     </div>
-    <div class="row">
+    <div class="row philosophie">
       <div class="column bg">
         <h2>Philosophie</h2>
         <p>China hat eine traditionsreiche Küche,
