--- a/speisekarte.html
+++ b/speisekarte.html
@@ -4,7 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt|Dekko&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <!-- <link rel="stylesheet" type="text/css" href="main.css"> -->
   <link rel="stylesheet" type="text/css" href="speisekarte.css">
   <title>Wok Show</title>
 
@@ -34,12 +34,17 @@
             <img src="./img/dumpMeat.jpg" alt="Dumplings" style="width:300px;height:300px;">
           </div>
           <div class="flip-card-back">
-            <h1>John Doe</h1>
-            <p>Architect & Engineer</p>
-            <p>We love that guy</p>
+            <h1>Sorten</h1>
+            <p>Lamm 8.9&euro;</p>
+            <p>Rind 7.9&euro;</p>
+            <p>Schwein 8.9&euro;</p>
+            <hr>
+            <p>Gebraten</p>
+            <p>Gedämpft</p>
           </div>
         </div>
       </div>
+      <p class="dumplings">Dumplings mit Fleisch</p>
     </div>
     <div class="column">
       <div class="flip-card">
