adjusted index.html and speisekarte

--- a/speisekarte.html
+++ b/speisekarte.html
@@ -25,54 +25,71 @@
       <li><a href="kontakt.html">Kontakt</a></li>
     </ul>
   </header>
+  <div class="row">
+    <div class="dumpColumn">
+      <p style="text-decoration:underline;"><strong>Speisekarte</strong></p>
+      <p style="font-size:20px;">Weitere Informationen kliken Sie bitte die Bilder </p>
+    </div>
+  </div>
 
   <div class="row">
     <div class="column">
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="./img/dumpMeat.jpg" alt="Dumplings" style="width:300px;height:300px;">
+            <img src="./img/dumpMeat.jpg" alt="Dumplings" style="width:300px;height:350px; border:3px double">
           </div>
           <div class="flip-card-back">
             <h1>Sorten</h1>
-            <p>Lamm 8.9&euro;</p>
+            <p>Schwein 6.9&euro;</p>
             <p>Rind 7.9&euro;</p>
-            <p>Schwein 8.9&euro;</p>
+            <p>Lamm 8.9&euro;</p>
             <hr>
             <p>Gebraten</p>
             <p>Gedämpft</p>
           </div>
         </div>
       </div>
-      <p class="dumplings">Dumplings mit Fleisch</p>
+      <p class="dumplings">Normale Dumplings</p>
     </div>
     <div class="column">
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="./img/dumpVege.jpg" alt="Dumplings" style="width:300px;height:300px;">
+            <img src="./img/dumpVege.jpg" alt="Dumplings" style="width:300px;height:350px;border:3px double">
           </div>
           <div class="flip-card-back">
-            <h1>John Doe</h1>
-            <p>Architect & Engineer</p>
-            <p>We love that guy</p>
+            <h1>Sorten</h1>
+            <p>Tofu,Ei,Gemüse 6.9&euro;</p>
+            <p>Tofu,Ei,Reisnudeln,Gemüse 7.9&euro;</p>
+            <p>Tofu,Ei,Bohnen,Gemüse 8.9&euro;</p>
+            <hr>
+            <p>Gebraten</p>
+            <p>Gedämpft</p>
           </div>
         </div>
       </div>
+      <p class="dumplings">Vegetarische Dumplings</p>
     </div>
     <div class="column">
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="./img/dumpVegan.jpg" alt="Dumplings" style="width:300px;height:300px;">
+            <img src="./img/dumpVegan.jpg" alt="Dumplings" style="width:300px;height:350px; border:3px double">
           </div>
           <div class="flip-card-back">
-            <h1>John Doe</h1>
-            <p>Architect & Engineer</p>
-            <p>We love that guy</p>
+            <h1>Sorten</h1>
+            <p>Soja Tofu,Gemüse 6.9&euro;</p>
+            <p>Soja Tofu,Reisnudeln,Gemüse 7.9&euro;</p>
+            <p>Soja Tofu,Bohnen,Gemüse 8.9&euro;</p>
+            <p>Soja Tofu,Kartoffeln,Gemüse 8.9&euro;</p>
+            <hr>
+            <p>Gebraten</p>
+            <p>Gedämpft</p>
           </div>
         </div>
       </div>
+      <p class="dumplings">Vegane Dumplings</p>
     </div>
   </div>
 
